# GatesAI-Chat

./: .env.firebase  .env.firebase.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODEBASE_OVERVIEW.html  CONSOLIDATION_REPORT.md  CONTRIBUTING.md  DIRECTIONS.md  ERROR_HANDLING_NOTES.md  NAMING.md  README.md  RENDER_PERF_NOTES.md  Start GatesAI Chat.cmd  TODO.md  eslint.config.js  firebase.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts  vitest.config.mjs  vitest.config.ts  vitest.live.config.ts
.claude/: launch.json
.firebase/: hosting.ZGlzdA.cache
docs/: IDEAS.md  VISION.md  arch-linux-appimage-install.html  architecture-tour.html  architecture.md  bridge-protocol.md  changelog.md  codebase-overview.html  comfyui-setup.md  design-browser-qa-bakeoff.md  gatesai-local-image-prereqs.md  intent.md  project-style-prompt.md  purpose.md  quick-setup.md  release-checklist.md  roadmap.md  self-update.md  taste.md  tech_spec.md  todo.md  user-guide.html
plans/: 001-measure-semantic-memory.md  002-rebuild-index-lifecycle.md  003-ship-evaluated-hybrid-retrieval.md  004-make-memory-transparent-and-controllable.md  README.md
scripts/: build-icon.py  (+13 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: brave_search.rs  desktop.rs  fetch_page.rs  http_health.rs  lib.rs  local_runtime.rs  main.rs  mcp_stdio.rs  offline_library.rs  secrets.rs  source_build.rs  source_workspace.rs  webkit_dmabuf.rs
(+790 files in other folders)
