[package]
name = "gatesai-chat"
version = "4.0.0"
description = "GatesAI Chat — local-first AI chat with workspace tools"
authors = ["Ethan Gates"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gatesai_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
open = "5"
keyring = { version = "3.6.3", default-features = false, features = ["windows-native", "apple-native", "sync-secret-service"] }
